# dynamixelui

./: CMakeLists.txt
include/: Component.hpp  Dashboard.hpp  Menu.hpp
include/dynamixel_sdk/: dynamixel_stats.h
src/: main.cpp
